📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12286,5 +12286,61 @@
         "published": "Sat, 13 Dec 2025 17:32:21 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46256249\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/13/ai-data-center-boom-could-be-bad-news-for-other-infrastructure-projects/",
+        "title": "AI data center boom could be bad news for other infrastructure projects",
+        "link": "https://techcrunch.com/2025/12/13/ai-data-center-boom-could-be-bad-news-for-other-infrastructure-projects/",
+        "published": "Sat, 13 Dec 2025 19:37:47 +0000",
+        "source": "TechCrunch",
+        "summary": "Improvements to roads, bridges, and other infrastructure could take a hit as data center construction accelerates."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/half-life-3-is-rumored-to-be-a-steam-machine-launch-title-and-could-arrive-in-spring-2026-193029413.html?src=rss",
+        "title": "Half-Life 3 is rumored to be a Steam Machine launch title and could arrive in spring 2026",
+        "link": "https://www.engadget.com/gaming/half-life-3-is-rumored-to-be-a-steam-machine-launch-title-and-could-arrive-in-spring-2026-193029413.html?src=rss",
+        "published": "Sat, 13 Dec 2025 19:30:29 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"no-affiliate-link\" href=\"https://www.engadget.com/gaming/pc/valves-trio-of-hardware-announcements-revived-my-half-life-3-fever-dream-170000561.html\">Half-Life fans</a> are nothing if not patient. For the diehard fans out there, the latest test of patience comes from <em>Insider Gaming Weekly</em>'s <a class=\"no-affiliate-link\" href=\"https://www.youtube.com/live/x7GRLcaZtgA\">podcast</a>, which claimed that the third installment in the Half-Life franchise is set to release with the la"
+    },
+    {
+        "id": "https://gizmodo.com/animation-and-video-games-lost-3-voice-actors-this-week-2000699341",
+        "title": "Animation and Video Games Lost 3 Voice Actors This Week",
+        "link": "https://gizmodo.com/animation-and-video-games-lost-3-voice-actors-this-week-2000699341",
+        "published": "Sat, 13 Dec 2025 19:50:17 +0000",
+        "source": "Gizmodo",
+        "summary": "90s and 00s kids likely grew up hearing voice actors Jim Ward, Jeff Garcia, and Julie Mayfield across the cartoons and games of their youth."
+    },
+    {
+        "id": "https://mashable.com/article/dec-13-dji-power-2000-portable-power-station-deal",
+        "title": "This DJI Power 2000 portable power station is 46% off this weekend (and it makes a great gift)",
+        "link": "https://mashable.com/article/dec-13-dji-power-2000-portable-power-station-deal",
+        "published": "Sat, 13 Dec 2025 19:20:10 +0000",
+        "source": "Mashable",
+        "summary": "This DJI Power 2000 portable power station and solar generator is 46% off this weekend."
+    },
+    {
+        "id": "https://mashable.com/article/dec-13-lg-34-inch-ultragear-curved-gaming-monitor-deal",
+        "title": "Shopping for a gamer? Save $100 on this LG 34-inch Ultragear curved gaming monitor this weekend",
+        "link": "https://mashable.com/article/dec-13-lg-34-inch-ultragear-curved-gaming-monitor-deal",
+        "published": "Sat, 13 Dec 2025 18:58:20 +0000",
+        "source": "Mashable",
+        "summary": "This LG 34-inch Ultragear curved gaming monitor  is on sale for $100 off this weekend."
+    },
+    {
+        "id": "https://www.theguardian.com/film/2025/dec/13/dick-van-dyke-centenarian-100-mary-poppins-chitty-chitty-bang-bang",
+        "title": "Dick Van Dyke turns 100",
+        "link": "https://www.theguardian.com/film/2025/dec/13/dick-van-dyke-centenarian-100-mary-poppins-chitty-chitty-bang-bang",
+        "published": "Sat, 13 Dec 2025 18:58:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46256954\">Comments</a>"
+    },
+    {
+        "id": "https://kanban.demo.codegres.com/",
+        "title": "Show HN: Trello Clone with Source Code",
+        "link": "https://kanban.demo.codegres.com/",
+        "published": "Sat, 06 Dec 2025 12:30:36 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46172807\">Comments</a>"
     }
 ]
