📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12342,5 +12342,53 @@
         "published": "Sat, 06 Dec 2025 12:30:36 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46172807\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/13/doordash-driver-faces-felony-charges-after-allegedly-spraying-customers-food/",
+        "title": "DoorDash driver faces felony charges after allegedly spraying customers\u2019 food",
+        "link": "https://techcrunch.com/2025/12/13/doordash-driver-faces-felony-charges-after-allegedly-spraying-customers-food/",
+        "published": "Sat, 13 Dec 2025 21:06:51 +0000",
+        "source": "TechCrunch",
+        "summary": "A woman is facing felony charges in Evansville, Indiana over a DoorDash delivery in which she allegedly sprayed the food with a substance that made the customers vomit."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/a-aaa-game-for-the-alien-franchise-is-back-in-the-works-204401214.html?src=rss",
+        "title": "A AAA game for the Alien franchise is back in the works",
+        "link": "https://www.engadget.com/gaming/a-aaa-game-for-the-alien-franchise-is-back-in-the-works-204401214.html?src=rss",
+        "published": "Sat, 13 Dec 2025 20:44:01 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/entertainment/tv-movies/alien-romulus-is-a-magnificent-return-to-form-193025453.html\"><em>Alien: Romulus</em></a> reawakened your appetite for the iconic <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/2014-10-03-alien-isolation-review-escape-claws.html\">sci-fi franchise</a>, the good news is that a promising video game could be on the way. According to an <a class=\"no-affiliate-link\" href=\"https://insider-gaming.com/n"
+    },
+    {
+        "id": "https://gizmodo.com/report-the-death-of-charlie-kirk-led-to-a-new-age-of-bosses-policing-social-media-2000699486",
+        "title": "Report: The Death of Charlie Kirk Led to a New Age of Bosses Policing Social Media",
+        "link": "https://gizmodo.com/report-the-death-of-charlie-kirk-led-to-a-new-age-of-bosses-policing-social-media-2000699486",
+        "published": "Sat, 13 Dec 2025 20:23:32 +0000",
+        "source": "Gizmodo",
+        "summary": "Experts tell the Washington Post that workers' social media behavior is on the minds of employers."
+    },
+    {
+        "id": "https://ipinfo.io/blog/vpn-location-mismatch-report",
+        "title": "VPN location claims don't match real traffic exits",
+        "link": "https://ipinfo.io/blog/vpn-location-mismatch-report",
+        "published": "Sat, 13 Dec 2025 19:46:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46257339\">Comments</a>"
+    },
+    {
+        "id": "https://jyn.dev/what-is-a-build-system-anyway/",
+        "title": "What is a build system, anyway?",
+        "link": "https://jyn.dev/what-is-a-build-system-anyway/",
+        "published": "Sat, 13 Dec 2025 19:58:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46257442\">Comments</a>"
+    },
+    {
+        "id": "https://www.science.org/content/article/want-sway-election-here-s-how-much-fake-online-accounts-cost",
+        "title": "Want to sway an election? Here\u2019s how much fake online accounts cost",
+        "link": "https://www.science.org/content/article/want-sway-election-here-s-how-much-fake-online-accounts-cost",
+        "published": "Sat, 13 Dec 2025 20:48:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46257871\">Comments</a>"
     }
 ]
