📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12422,5 +12422,13 @@
         "published": "Sat, 13 Dec 2025 21:18:01 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46258163\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/dec-13-imagiyo-ai-image-generator-standard-plan-lifetime-subscription",
+        "title": "Turn a few words into a high-quality image with this $35 AI-powered tool",
+        "link": "https://mashable.com/article/dec-13-imagiyo-ai-image-generator-standard-plan-lifetime-subscription",
+        "published": "Sat, 13 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Bring anything to life with this lifetime subscription to Imagiyo AI Image Generator's Standard Plan, now only $34.97 (reg. $495) through Dec. 14 at 11:59 p.m. PT."
     }
 ]
