📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12446,5 +12446,13 @@
         "published": "Sat, 13 Dec 2025 23:39:48 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46259334\">Comments</a>"
+    },
+    {
+        "id": "https://www.jsoftware.com/ioj/ioj.htm",
+        "title": "An Implementation of J",
+        "link": "https://www.jsoftware.com/ioj/ioj.htm",
+        "published": "Sun, 14 Dec 2025 00:34:56 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46259702\">Comments</a>"
     }
 ]
