--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12454,5 +12454,29 @@
         "published": "Sun, 14 Dec 2025 00:34:56 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46259702\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-14-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 14, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-14-2025",
+        "published": "Sun, 14 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-14-2025",
+        "title": "NYT Strands hints, answers for December 14, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-14-2025",
+        "published": "Sun, 14 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-14-2025",
+        "title": "Wordle today: Answer, hints for December 14, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-14-2025",
+        "published": "Sun, 14 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1638 on December 14 as well as a few hints, tips, and clues to help you solve it yourself."
     }
 ]
