📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12478,5 +12478,13 @@
         "published": "Sun, 14 Dec 2025 03:00:00 +0000",
         "source": "Mashable",
         "summary": "Here's the answer for \"Wordle\" #1638 on December 14 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://alavi.me/blog/e-ink-tablet-as-monitor-linux/",
+        "title": "Using E-Ink tablet as monitor for Linux",
+        "link": "https://alavi.me/blog/e-ink-tablet-as-monitor-linux/",
+        "published": "Tue, 09 Dec 2025 14:10:41 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46205089\">Comments</a>"
     }
 ]
