📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12486,5 +12486,37 @@
         "published": "Tue, 09 Dec 2025 14:10:41 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46205089\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/13/indias-spinny-lines-up-160m-funding-to-acquire-gomechanic-sources-say/",
+        "title": "India\u2019s Spinny lines up $160M funding to acquire GoMechanic, sources say",
+        "link": "https://techcrunch.com/2025/12/13/indias-spinny-lines-up-160m-funding-to-acquire-gomechanic-sources-say/",
+        "published": "Sun, 14 Dec 2025 04:30:07 +0000",
+        "source": "TechCrunch",
+        "summary": "Spinny is set to be valued at about $1.8 billion post-money in its latest funding round."
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-14-2025",
+        "title": "Hurdle hints and answers for December 14, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-14-2025",
+        "published": "Sun, 14 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-14",
+        "title": "Moon phase today: What the moon will look like on December 14",
+        "link": "https://mashable.com/article/moon-phase-today-dec-14",
+        "published": "Sun, 14 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 14, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://github.com/leanprover-community/mathlib4",
+        "title": "Lean Theorem Prover Mathlib",
+        "link": "https://github.com/leanprover-community/mathlib4",
+        "published": "Sun, 14 Dec 2025 01:49:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46260128\">Comments</a>"
     }
 ]
