📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12518,5 +12518,29 @@
         "published": "Sun, 14 Dec 2025 01:49:11 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46260128\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/review/review-alpine-a390/",
+        "title": "Alpine A390 Review: Price, Specs, Availability",
+        "link": "https://www.wired.com/review/review-alpine-a390/",
+        "published": "Sun, 14 Dec 2025 07:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Ahead of its entry into the US, the European brand with an ex-Ferrari boss and decades of motorsport success has a new EV to take on Porsche and Polestar. WIRED tries it on for size."
+    },
+    {
+        "id": "https://www.wired.com/story/in-a-first-ai-models-analyze-language-as-well-as-a-human-expert/",
+        "title": "For the First Time, AI Analyzes Language as Well as a Human Expert",
+        "link": "https://www.wired.com/story/in-a-first-ai-models-analyze-language-as-well-as-a-human-expert/",
+        "published": "Sun, 14 Dec 2025 07:00:00 +0000",
+        "source": "WIRED",
+        "summary": "If language is what makes us human, what does it mean now that large language models have gained \u201cmetalinguistic\u201d abilities?"
+    },
+    {
+        "id": "https://1393.xyz/writing/if-a-meta-ai-model-can-read-a-brain-wide-signal-why-wouldnt-the-brain",
+        "title": "If a Meta AI model can read a brain-wide signal, why wouldn't the brain?",
+        "link": "https://1393.xyz/writing/if-a-meta-ai-model-can-read-a-brain-wide-signal-why-wouldnt-the-brain",
+        "published": "Sun, 14 Dec 2025 01:43:33 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46260106\">Comments</a>"
     }
 ]
