📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12542,5 +12542,13 @@
         "published": "Sun, 14 Dec 2025 01:43:33 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46260106\">Comments</a>"
+    },
+    {
+        "id": "https://iamstelios.com/blog/surface-tension-of-software/",
+        "title": "Surface Tension of Software",
+        "link": "https://iamstelios.com/blog/surface-tension-of-software/",
+        "published": "Sun, 14 Dec 2025 08:54:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46261739\">Comments</a>"
     }
 ]
