📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12550,5 +12550,21 @@
         "published": "Sun, 14 Dec 2025 08:54:05 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46261739\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/is-your-vibrator-spying-on-you/",
+        "title": "Is Your Vibrator Spying on You?",
+        "link": "https://www.wired.com/story/is-your-vibrator-spying-on-you/",
+        "published": "Sun, 14 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Here\u2019s everything you need to know about data privacy in sex toys and the apps that connect to them."
+    },
+    {
+        "id": "https://gizmodo.com/the-netflix-warner-deal-faces-increasingly-plausible-sounding-government-opposition-2000699498",
+        "title": "The Netflix-Warner Deal Faces Increasingly Plausible-Sounding Government Opposition",
+        "link": "https://gizmodo.com/the-netflix-warner-deal-faces-increasingly-plausible-sounding-government-opposition-2000699498",
+        "published": "Sun, 14 Dec 2025 10:00:36 +0000",
+        "source": "Gizmodo",
+        "summary": "Wait, is the government actually going to do something about this?"
     }
 ]
