📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12566,5 +12566,77 @@
         "published": "Sun, 14 Dec 2025 10:00:36 +0000",
         "source": "Gizmodo",
         "summary": "Wait, is the government actually going to do something about this?"
+    },
+    {
+        "id": "https://www.wired.com/story/how-do-astronomers-find-planets-in-other-solar-systems/",
+        "title": "How Do Astronomers Find Planets in Other Solar Systems?",
+        "link": "https://www.wired.com/story/how-do-astronomers-find-planets-in-other-solar-systems/",
+        "published": "Sun, 14 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Even the best telescopes can\u2019t see exoplanets. It\u2019s all about watching for jiggly stars, blue shifts, and transits."
+    },
+    {
+        "id": "https://gizmodo.com/this-star-is-being-eaten-alive-and-its-explosive-death-will-be-visible-in-broad-daylight-2000698104",
+        "title": "This Star Is Being Eaten Alive\u2014and Its Explosive Death Will Be Visible in Broad Daylight",
+        "link": "https://gizmodo.com/this-star-is-being-eaten-alive-and-its-explosive-death-will-be-visible-in-broad-daylight-2000698104",
+        "published": "Sun, 14 Dec 2025 11:00:51 +0000",
+        "source": "Gizmodo",
+        "summary": "Researchers have figured out why V Sagittae is so gosh dang bright."
+    },
+    {
+        "id": "https://mashable.com/roundup/best-chromebooks-2025-tested",
+        "title": "The best Chromebooks of 2025: Our top tested picks, compared",
+        "link": "https://mashable.com/roundup/best-chromebooks-2025-tested",
+        "published": "Sun, 14 Dec 2025 10:10:00 +0000",
+        "source": "Mashable",
+        "summary": "We've vetted the best Chromebooks of 2025, comparing the Lenovo Flex 5i Chromebook Plus, Acer Chromebook Plus Spin 514, and more."
+    },
+    {
+        "id": "https://mashable.com/article/ravens-bengals-nfl-2025-live-stream-for-free",
+        "title": "How to watch Ravens vs. Bengals in the NFL online for free",
+        "link": "https://mashable.com/article/ravens-bengals-nfl-2025-live-stream-for-free",
+        "published": "Sun, 14 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NFL for free. Live stream the NFL for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/packers-broncos-nfl-2025-live-stream-for-free",
+        "title": "How to watch Packers vs. Broncos in the NFL online for free",
+        "link": "https://mashable.com/article/packers-broncos-nfl-2025-live-stream-for-free",
+        "published": "Sun, 14 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NFL for free. Live stream the NFL for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/chargers-chiefs-nfl-2025-live-stream-for-free",
+        "title": "How to watch Chargers vs. Chiefs in the NFL online for free",
+        "link": "https://mashable.com/article/chargers-chiefs-nfl-2025-live-stream-for-free",
+        "published": "Sun, 14 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NFL for free. Live stream the NFL for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/what-to-gift-a-kindle-user",
+        "title": "Giving a Kindle this holiday season? Here are all the cases, stocking stuffers, and extras to go with it.",
+        "link": "https://mashable.com/article/what-to-gift-a-kindle-user",
+        "published": "Sun, 14 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Giving a Kindle this holiday season? If you're feeling extra generous, we rounded up the best gifts for Kindle users, including cases, accessories, and more."
+    },
+    {
+        "id": "https://www.zdnet.com/article/zdnet-breakthrough-awards-winners-2025/",
+        "title": "The 5 most innovative tech products that surprised us this year (including a first for robot vacs)",
+        "link": "https://www.zdnet.com/article/zdnet-breakthrough-awards-winners-2025/",
+        "published": "Sun, 14 Dec 2025 11:00:47 GMT",
+        "source": "Latest news",
+        "summary": "From AI glasses with digital overlays to robot vacuums that can pick up your leftover laundry, here are ZDNET's Breakthrough Award winners for 2025."
+    },
+    {
+        "id": "https://www.zdnet.com/article/why-you-shouldnt-use-your-router-usb-port/",
+        "title": "Stop using your router's USB port - what PC experts recommend instead",
+        "link": "https://www.zdnet.com/article/why-you-shouldnt-use-your-router-usb-port/",
+        "published": "Sun, 14 Dec 2025 10:30:46 GMT",
+        "source": "Latest news",
+        "summary": "Don't rely on your router's USB port; it's unreliable and potentially vulnerable to malware."
     }
 ]
