--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12686,5 +12686,37 @@
         "published": "Wed, 10 Dec 2025 04:09:04 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46213985\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/column/843883/ai-image-generators-better-worse",
+        "title": "AI image generators are getting better by getting worse",
+        "link": "https://www.theverge.com/column/843883/ai-image-generators-better-worse",
+        "published": "2025-12-14T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "This is The Stepback, a weekly newsletter breaking down one essential story from the tech world. For more on smartphones and digital imagery - real or otherwise - follow Allison Johnson. The Stepback arrives in our subscribers' inboxes at 8AM ET. Opt in for The Stepback here. How it started Remember the early days of [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/844117/letterboxd-store-skate-story-ifixit-installer",
+        "title": "A new old idea about video stores",
+        "link": "https://www.theverge.com/tech/844117/letterboxd-store-skate-story-ifixit-installer",
+        "published": "2025-12-14T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Hi, friends! Welcome to Installer No. 109, your guide to the best and Verge-iest stuff in the world. (If you're new here, welcome, hope you're staying warm, and also you can read all the old editions at the Installer homepage.) This week, I've been reading about Google Maps and shopaganda and life as a pop [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/bike-gear-winter-commute/",
+        "title": "The Best Bike Gear for Your Brisk, Wintry Commute (2025)",
+        "link": "https://www.wired.com/gallery/bike-gear-winter-commute/",
+        "published": "Sun, 14 Dec 2025 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Stay strong, fair-weather friends\u2014you can keep biking to work even through the darkest, coldest days."
+    },
+    {
+        "id": "https://dagger.io/",
+        "title": "Dagger: Define software delivery workflows and dev environments",
+        "link": "https://dagger.io/",
+        "published": "Tue, 09 Dec 2025 08:32:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46202624\">Comments</a>"
     }
 ]
