📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12718,5 +12718,53 @@
         "published": "Tue, 09 Dec 2025 08:32:51 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46202624\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/games/843010/xbox-ally-x-sleep-battery-drain-two-months-later",
+        "title": "I&#8217;m finally beginning to trust Microsoft&#8217;s handheld Xbox",
+        "link": "https://www.theverge.com/games/843010/xbox-ally-x-sleep-battery-drain-two-months-later",
+        "published": "2025-12-14T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "I still wouldn't buy an Xbox Ally, and I still don't think the tweaked version of Windows that shipped with it is ready for primetime. The Xbox Full Screen Experience (FSE) needs work. But two months after I panned the cheaper $600 white Xbox Ally and wasn't quite sold on the $1,000 black one, one [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/nanit-home-display/",
+        "title": "Nanit Home Display Review: A Transformative Tablet",
+        "link": "https://www.wired.com/review/nanit-home-display/",
+        "published": "Sun, 14 Dec 2025 14:04:00 +0000",
+        "source": "WIRED",
+        "summary": "The innovative smart baby monitor ecosystem adds a tablet to its lineup. Is it worth overlooking some quirks?"
+    },
+    {
+        "id": "https://mathstodon.xyz/@dpiponi/115651419771418748",
+        "title": "Apple Maps claims it's 29,905 miles away",
+        "link": "https://mathstodon.xyz/@dpiponi/115651419771418748",
+        "published": "Sun, 14 Dec 2025 13:45:41 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46262950\">Comments</a>"
+    },
+    {
+        "id": "https://www.ufried.com/blog/ironies_of_ai_2/",
+        "title": "AI and the ironies of automation \u2013 Part 2",
+        "link": "https://www.ufried.com/blog/ironies_of_ai_2/",
+        "published": "Sun, 14 Dec 2025 13:19:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46262816\">Comments</a>"
+    },
+    {
+        "id": "https://www.ftm.eu/articles/europe-health-data-us-firm-israel-spies",
+        "title": "Europeans' health data sold to US firm run by ex-Israeli spies",
+        "link": "https://www.ftm.eu/articles/europe-health-data-us-firm-israel-spies",
+        "published": "Sun, 14 Dec 2025 12:15:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46262524\">Comments</a>"
+    },
+    {
+        "id": "https://codemanship.wordpress.com/2025/12/14/the-gorman-paradox-where-are-all-the-ai-generated-apps/",
+        "title": "The Gorman Paradox: Where Are All the AI-Generated Apps?",
+        "link": "https://codemanship.wordpress.com/2025/12/14/the-gorman-paradox-where-are-all-the-ai-generated-apps/",
+        "published": "Sun, 14 Dec 2025 12:18:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46262545\">Comments</a>"
     }
 ]
