📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12822,5 +12822,29 @@
         "published": "Sun, 14 Dec 2025 15:05:06 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46263530\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/14/rivians-survival-plan-involves-more-than-cars/",
+        "title": "TechCrunch Mobility: Rivian\u2019s survival plan involves more than cars",
+        "link": "https://techcrunch.com/2025/12/14/rivians-survival-plan-involves-more-than-cars/",
+        "published": "Sun, 14 Dec 2025 17:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Welcome back to TechCrunch Mobility \u2014 your central hub for news and insights on the future of transportation."
+    },
+    {
+        "id": "https://www.engadget.com/mobile/smartphones/ayaneos-first-smartphone-is-a-major-callback-to-the-xperia-play-165206332.html?src=rss",
+        "title": "Ayaneo's first smartphone is a major callback to the Xperia Play",
+        "link": "https://www.engadget.com/mobile/smartphones/ayaneos-first-smartphone-is-a-major-callback-to-the-xperia-play-165206332.html?src=rss",
+        "published": "Sun, 14 Dec 2025 16:52:06 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Close enough, welcome back <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/2011-03-28-sony-ericsson-xperia-play-review.html\">Xperia Play</a>. After releasing a <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/mobile/smartphones/ayaneos-first-smartphone-could-have-physical-shoulder-buttons-182033773.html\">teaser video</a> in early November, Ayaneo fully revealed its first smartphone called the <a class=\"no-affiliate-link\" href=\"https://www.youtube.com/watch?v=XVDNGMIlzmI"
+    },
+    {
+        "id": "https://boringsql.com/posts/vacuum-is-lie/",
+        "title": "Vacuum Is a Lie: About Your Indexes",
+        "link": "https://boringsql.com/posts/vacuum-is-lie/",
+        "published": "Sun, 14 Dec 2025 13:13:41 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46262777\">Comments</a>"
     }
 ]
